; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_dalloc_small.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_dalloc_small.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @arena_dalloc_small(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32* @iealloc(i32* %7, i8* %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32* @arena_get_from_extent(i32* %10)
  store i32* %11, i32** %6, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @arena_dalloc_bin(i32* %12, i32* %13, i32* %14, i8* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @arena_decay_tick(i32* %17, i32* %18)
  ret void
}

declare dso_local i32* @iealloc(i32*, i8*) #1

declare dso_local i32* @arena_get_from_extent(i32*) #1

declare dso_local i32 @arena_dalloc_bin(i32*, i32*, i32*, i8*) #1

declare dso_local i32 @arena_decay_tick(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
